# rustots

./: .gitignore  Cargo.toml  LEXICO.md  MELHORIAS_V0.2.md  README.md  TesteRust.rs  package-lock.json  rustteste
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/dist-electron/: main.js  preload.js
app/electron/: main.ts  preload.ts
app/src/: App.tsx  index.css
app/src/components/: ASTView.tsx  TokensView.tsx
app/src/components/ui/: badge.tsx  scroll-area.tsx
core/: Cargo.toml
core/samples/: example_error.ts  example_malformed.ts  example_ok.ts
core/src/: collect.rs  diagnostics.rs  lexer.rs  main.rs  parse.rs  parser.rs  symbols.rs  types.rs
docs/: componentes.md  fluxograma.md
schema/: diagnostic.json  token_stream.json
