[package]
name = "rustots"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustots"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
